[package]
name = "uucp-rs"
description = "Library and utilities to manage UUCP queues."
version = "0.1.0"
edition = "2021"
authors = [ "Ollivier Robert <roberto@keltia.net"]
keywords = [ "UUCP", "Command-line utilities", "library"]
repository = "https://github.com/keltia/uucp-rs"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

